# raggd

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml  sample.env  sample.envrc  spec.md
.agents/guides/: engineering-guide.md  patterns-and-architecture.md  styleguides.md  workflow.md
.agents/guides/workflow-extras/: codereview-tpl.md  implementation-mini-tpl.md  implementation-tpl.md  spec-mini-tpl.md  spec-tpl.md  stakeholder-feedback-tpl.json
.agents/tasks/feat/0001-cli-bootstrap/: implementation.md  spec.md
.agents/tasks/feat/0002-source-management/: implementation.md  spec.md
.agents/tasks/feat/0003-db-module/: implementation.md  spec.md
.agents/tasks/feat/0003-db-module/attachments/: schema-reference.md
.agents/tasks/feat/0004-parser-module/: implementation.md  spec.md
.agents/tasks/feat/0005-vdb-module/: implementation.md  proposal.md  spec.md
.agents/tasks/feat/0005-vdb-module/feedback/: architect-feedback-01.json  architect-feedback-02.json  architect-feedback-03.json  architect-feedback-04.json  stakeholder-feedback-03.json  stakeholder-spec-feedback-01.json  stakeholder-spec-feedback-02.json
.agents/tasks/feat/0006-db-run-debug-output/: spec.md
.agents/tasks/feat/0007-db-info-table-counts/: implementation.md  spec.md
docs/: index.md
docs/api/: db.md  index.md
docs/contribute/: index.md  openai-embeddings-provider.md  parser-runbook.md
docs/learn/: parser.md  vdb.md  workspace.md
docs/releases/: index.md  parser-cli-phase8.md
src/raggd/: __init__.py  __main__.py
src/raggd/cli/: __init__.py  checkhealth.py  db.py  init.py  parser.py  source.py  vdb.py
src/raggd/core/: __init__.py  config.py  logging.py  paths.py
src/raggd/health/: __init__.py  document.py  errors.py
src/raggd/modules/: __init__.py  registry.py
src/raggd/modules/db/: __init__.py  backend.py  health.py  lifecycle.py  migrations.py  models.py  settings.py  uuid7.py
src/raggd/modules/db/resources/: __init__.py
src/raggd/modules/db/resources/db/: __init__.py
src/raggd/modules/db/resources/db/migrations/: 066C4MFM01VQ.up.sql  066CEY2G01SG.down.sql  066CEY2G01SG.up.sql  06CVG7EEZ5YH.down.sql  06CVG7EEZ5YH.up.sql
src/raggd/modules/manifest/: __init__.py  backups.py  config.py  helpers.py  locks.py  migrator.py  service.py  types.py
src/raggd/modules/parser/: __init__.py  artifacts.py  hashing.py  health.py  models.py  persistence.py  recomposition.py  registry.py  service.py  staging.py  tokenizer.py  traversal.py
src/raggd/modules/parser/handlers/: __init__.py  base.py  css.py  delegation.py  html.py  javascript.py  markdown.py  python.py  text.py
src/raggd/modules/parser/sql/: __init__.py  chunk_slices_delete_by_batch.sql  chunk_slices_select_by_chunk.sql  chunk_slices_select_by_file.sql  chunk_slices_select_history_by_file.sql  chunk_slices_update_last_seen.sql  chunk_slices_upsert.sql
src/raggd/modules/vdb/: __init__.py  errors.py  faiss_index.py  health.py  models.py  service.py
src/raggd/modules/vdb/providers/: __init__.py  openai.py
src/raggd/resources/: __init__.py  raggd.defaults.toml
src/raggd/source/: __init__.py  config.py  errors.py  health.py  hooks.py  models.py  service.py  utils.py
tests/: conftest.py
tests/cli/: test_checkhealth.py  test_cli_app.py  test_db.py  test_init.py  test_main.py  test_parser.py  test_source.py  test_vdb.py  test_vdb_cli.py
tests/core/: test_config.py  test_logging.py  test_paths.py
tests/health/: test_document.py
tests/modules/: __init__.py  test_registry.py
tests/modules/db/: __init__.py  test_backend.py  test_db_resources.py  test_health.py  test_lifecycle.py  test_migrations.py  test_models.py  test_settings.py  test_uuid7.py
tests/modules/manifest/: test_service.py
tests/modules/manifest/data/: legacy_manifest.json  legacy_manifest.migrated.json
tests/modules/parser/: test_artifacts.py  test_handler_css.py  test_handler_html.py  test_handler_javascript.py  test_handler_markdown.py  test_handler_python.py  test_handler_registry.py  test_handler_text.py  test_handlers_base.py  test_hashing.py  test_parser_health.py  test_parser_service.py  test_persistence.py  test_recomposition.py  test_sql_resources.py  test_tokenizer.py  test_traversal.py
tests/modules/vdb/: __init__.py  test_faiss_index.py  test_health.py  test_models.py  test_provider_contracts.py  test_provider_openai.py  test_providers.py  test_service.py
tests/resources/: test_resources.py
tests/source/: __init__.py  test_config_store.py  test_health.py  test_hooks.py  test_models.py  test_service.py  test_utils.py
