[project]
name = "raggd"
version = "0.1.0"
description = "RAG tool for your code and documents."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Matt Lebrun", email = "matt@lebrun.org" }
]
dependencies = [
    "jinja2>=3.1",
    "platformdirs>=3.11",
    "pydantic>=2",
    "pydantic-settings>=2",
    "rich>=13",
    "structlog>=24",
    "tomlkit>=0.12",
    "typer>=0.12",
]

[project.optional-dependencies]
source = []
db = []
file-monitoring = [
    "watchdog>=4",
]
local-embeddings = [
    "onnxruntime>=1.17",
    "sentence-transformers>=3",
]
mcp = [
    "mcp>=1",
]
mcp-rest = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
parser = [
    "libcst>=1.4",
    "markdown-it-py>=3",
    "tree-sitter>=0.21",
    "tree_sitter_languages>=1.9",
]
rag = [
    "faiss-cpu>=1.8",
    "openai>=1",
    "rapidfuzz>=3",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
]

docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-exclude",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-jupyter",
    "mkdocs-llmstxt",
    "mkdocs-material[imaging]",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings-python",
]

modules = [
    { include-group = "source" },
    { include-group = "db" },
    { include-group = "file-monitoring" },
    { include-group = "local-embeddings" },
    { include-group = "mcp" },
    { include-group = "mcp-rest" },
    { include-group = "parser" },
    { include-group = "rag" },
]

file-monitoring = [
    "watchdog>=4",
]

db = []

local-embeddings = [
    "onnxruntime>=1.17",
    "sentence-transformers>=3",
]

mcp = [
    "mcp>=1",
]

mcp-rest = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

parser = [
    "libcst>=1.4",
    "markdown-it-py>=3",
    "tree-sitter>=0.21",
    "tree_sitter_languages>=1.9",
]

rag = [
    "faiss-cpu>=1.8",
    "openai>=1",
    "rapidfuzz>=3",
    "tiktoken>=0.7",
]

source = []

test = [
    "pytest",
    "coverage",
    "pytest-xdist",
    "pytest-cov",
    "pytest-pretty",
    "ruff",
]

[project.scripts]
raggd = "raggd.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"raggd" = [
    "resources/**/*.toml",
    "resources/**/*.j2",
    "modules/db/resources/**/*.sql",
]

[tool.uv]
package = true
default-groups = ["dev"]


[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "raggd"


[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "C90"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["raggd"]
detect-same-package = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
order-by-type = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 120
max-line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-type-checking]
quote-annotations = false
runtime-evaluated-base-classes = [
    "BaseModel",
]
runtime-evaluated-decorators = [
    "dataclasses.dataclass",
    "pydantic.validate_call",
]
exempt-modules = [
    "typing",
    "typing_extensions",
]

[tool.pytest.ini_options]
addopts = "-q -n auto --cov=raggd --cov-report=term-missing --cov-report=xml --cov-fail-under=100 --maxfail=1"
testpaths = ["tests"]
